# log-anomaly-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.html
loganomaly/: __init__.py  cli.py  detector.py  features.py  generator.py  reporter.py
