[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loganomaly"
version = "0.1.0"
description = "Security Log Anomaly Detector — unsupervised ML for SSH, web, and system log analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "s3vtyq"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security :: Log Analysis",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
loganomaly = "loganomaly.cli:cli"

[tool.setuptools.packages.find]
include = ["loganomaly*"]
